RESOLVED FIXED121164
VectorBuffer::swap doesn't need to use std::swap_ranges
https://bugs.webkit.org/show_bug.cgi?id=121164
Summary VectorBuffer::swap doesn't need to use std::swap_ranges
Anders Carlsson
Reported 2013-09-11 09:47:32 PDT
VectorBuffer::swap doesn't need to use std::swap_ranges
Attachments
Patch (2.09 KB, patch)
2013-09-11 09:50 PDT, Anders Carlsson
no flags
Anders Carlsson
Comment 1 2013-09-11 09:50:27 PDT
WebKit Commit Bot
Comment 2 2013-09-11 11:06:55 PDT
Comment on attachment 211319 [details] Patch Clearing flags on attachment: 211319 Committed r155542: <http://trac.webkit.org/changeset/155542>
WebKit Commit Bot
Comment 3 2013-09-11 11:06:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.