VectorBuffer::swap doesn't need to use std::swap_ranges https://bugs.webkit.org/show_bug.cgi?id=121164

Reviewed by Darin Adler.

There's a std::swap overload for swapping arrays, just use it instead.

* wtf/Vector.h:
(WTF::VectorBuffer::swap):


Canonical link: https://commits.webkit.org/139100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155542 268f45cc-cd09-0410-ab3c-d52691b4dbfc